[gd_scene load_steps=4 format=3 uid="uid://ye88dk2ich1c"]

[ext_resource type="Script" path="res://UI/city_menu.gd" id="1_53uqh"]

[sub_resource type="LabelSettings" id="LabelSettings_6ampb"]
line_spacing = 0.0
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_1hutm"]
font_size = 40

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53uqh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.219608, 0.219608, 0.219608, 0.266667)

[node name="city_name_label" type="Label" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "City Name"
label_settings = SubResource("LabelSettings_6ampb")

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/BoxContainer"]
layout_mode = 2
text = "Market"
label_settings = SubResource("LabelSettings_1hutm")

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/BoxContainer2"]
layout_mode = 2
text = "Forge"
label_settings = SubResource("LabelSettings_1hutm")

[node name="BoxContainer3" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="CloseButton" type="Button" parent="MarginContainer/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Exit"
